# flywheel_RestingfMRI_Denoise

./: Dockerfile  README.md  manifest.json  pyproject.toml  run.py
docs/: pipeline-ICA-AROMA_2Phys_1GS_spikes-FD5.json  pipeline_template.json  pipelines
utils/: singularity.py
utils/bids/: download_bids_for_runlevel  download_run_level.py  run_level.py
utils/fly/: environment.py
