[tool.poetry]
name = "flywheel-restingfmri-denoise"
version = "0.1.0"
description = ""
authors = ["XiaoXiaoqian <xiaoqian@stanford.edu>"]
readme = "README.md"
packages = [{include = "flywheel_restingfmri_denoise"}]

[tool.poetry.dependencies]
python = "^3.8"
flywheel-gear-toolkit = "^0.6.2"
flywheel-sdk = "^15.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
